--- a/style.css
+++ b/style.css
@@ -9,11 +9,20 @@ body {
 }
 .main{
    width: 100%;
-   height: 101vh;
-   background-color: rgba(0,0,0,0.7);
-   background-image: url("http://127.0.0.1:5500/img/Group%208.png");
+   height: 100vh;
+   /* background-image: url("http://127.0.0.1:5500/img/Group%208.png"); */
    position: relative; /* Залишає контент над фоном */
    z-index: 1; /* Забезпечує видимість контенту */
+}
+.photo{
+   width: 100%;
+   height: 100vh;
+   position: relative; /* Залишає контент над фоном */
+   z-index: 1; /* Забезпечує видимість контенту */
+   object-fit: cover; /* Зберігає пропорції та заповнює весь екран */
+   z-index: -1; /* Розміщує фон нижче за інші елементи */
+   overflow: hidden; /* Запобігає прокручуванню фону */
+   position: absolute;
 }
 
 .header{
