--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 
+
 body {
    margin: 0;
    padding: 0;
@@ -249,7 +250,7 @@ body {
 .filter-container {
    display: flex;
    flex-direction: column;
-   margin: 0 auto;
+   margin-left: -90px;
    padding: 40px 20px;
    text-align: center;
    /* background-color: rgb(0, 47, 255); */
@@ -359,6 +360,8 @@ body {
    grid-template-columns: repeat(3, 1fr);
    gap: 40px;
    justify-content: center;
+   /* background-color: #e46e00; */
+   flex-direction: column;
 }
 
 /* Картки */
@@ -483,5 +486,21 @@ body {
    }
    .main-text-house{
       font-size: 100px;
+      margin-top: -60px;
+   }
+   .recommend-grid{
+      grid-template-columns: repeat(1, 6fr);
+   }
+   .filter-grid{
+      grid-template-columns: repeat(2, 1fr);
+   }
+   .filter-item{
+      width: 150px;
+      height: 27px;
+      margin-top: 20px;
+   }
+   .logo{
+      padding-right: 200px;
+      /* background-color: #e46e00; */
    }
 }
